# code-agent-harness

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-15-agent-runtime-phase-1-implementation.md  2026-04-16-code-assistant-phase-2-implementation.md  2026-04-18-code-assistant-phase-3-implementation.md
docs/superpowers/specs/: 2026-04-15-agent-runtime-phase-1-design.md  2026-04-16-code-assistant-phase-2-5-design.md  2026-04-16-code-assistant-phase-2-design.md  2026-04-18-code-assistant-phase-3-design.md
src/code_agent_harness/: cli.py  config.py
src/code_agent_harness/engine/: __init__.py  cancellation.py  compaction.py  cycle_guard.py  loop.py  observability.py  state_machine.py
src/code_agent_harness/evals/: __init__.py  diagnostics.py  matching.py  runner.py  scoring.py  tasks.py  trace.py
src/code_agent_harness/llm/: __init__.py  base.py  fake_provider.py  openai_compatible.py
src/code_agent_harness/policies/: __init__.py  code_assistant.py  engine.py
src/code_agent_harness/profiles/: __init__.py  code_assistant.py
tests/: conftest.py  test_cancellation.py  test_cli_phase2.py  test_code_assistant_profile.py  test_code_assistant_tools.py  test_compaction.py  test_cycle_guard.py  test_engine_loop.py  test_live_provider.py  test_policy_engine.py  test_prompt_builder.py  test_protocol.py  test_session_resume.py  test_state_machine.py  test_tool_descriptions.py
tests/evals/: test_eval_ablations.py  test_eval_diagnostics.py  test_eval_matching.py  test_eval_runner.py  test_eval_scoring.py  test_eval_tasks.py
(+30 files in other folders)
