[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "code-agent-harness"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
code-agent-harness = "code_agent_harness.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
